[package]
name = "xcmv3"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-alpha.3", default-features = false }

scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full"] }
xcm = { git = "https://github.com/arturgontijo/polkadot", default-features = false, branch = "trappist-xcm-v3" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }

[lib]
name = "xcmv3"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
    "sp-io/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
